# Projekt1

./: README.md
sfml/sfml/: CMakeLists.txt  Game.cpp  Game.h  GameState.cpp  GameState.h  Paddle.h  Paletka.h  main1.cpp  pilka.h  stone.cpp  stone.h
